--- a/CSS/style.css
+++ b/CSS/style.css
@@ -79,7 +79,7 @@ div {
 }
 
 #side-nav {
-    padding-top: 60px;
+    padding-top: 50px;
     padding-bottom: 40px;
     width: 20%;
     position: fixed;
@@ -122,7 +122,7 @@ div {
     font-weight: 700;
     margin-bottom: 0em;
     text-transform: uppercase;
-    font-size: 38px;
+    font-size: 32px;
 
   }
 
@@ -770,11 +770,36 @@ div {
   display: block;
 }
 
+.modal-content {
+  background: whitesmoke;
+}
 .modal {
   position: relative;
-  width: 100%;
+  width: 100% !important;
+  max-height: 100vh;
+}
+.modal .close {
+  margin-top: -27px;
+}
+.modal-footer .btn-primary {
+  background-color: #228896;
+}
+.modal::-webkit-scrollbar {
+  width: 5px;
 }
 
+.modal::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+.modal::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 3px;
+}
+
+.modal::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
 
 
   
