--- a/CSS/style.css
+++ b/CSS/style.css
@@ -95,7 +95,8 @@ div {
 #side-nav img {
     display: block;
     border-radius: 50%;
-    width: 50%;
+    width: 70%;
+    height: 24vh;
     margin-bottom: 1.5em;
     margin-left: auto;
     margin-right: auto;
@@ -122,7 +123,7 @@ div {
     font-weight: 700;
     margin-bottom: 0em;
     text-transform: uppercase;
-    font-size: 32px;
+    font-size: 28px;
 
   }
 
@@ -157,7 +158,7 @@ div {
     }
   }
 #side-nav #main-menu ul li {
-    margin: 0 0 20px 0;
+    margin: 0 0 10px 0;
     padding: 0;
     list-style: none;
   }
@@ -224,7 +225,7 @@ div {
   #side-nav .menu-footer {
     position: absolute;
     bottom: 40px;
-    font-size: 10px;
+    font-size: 12px;
     text-align: center;
     width: 100%;
     font-weight: 400;
@@ -679,6 +680,7 @@ div {
   }
   .mobilisation-blog a img {
     width: 100%;
+    height: 24vh;
   }
   @media screen and (max-width: 768px) {
     .fh5co-blog {
@@ -690,7 +692,7 @@ div {
     position: relative;
     background: #fff;
     width: 100%;
-    padding: 30px;
+    padding: 17px;
     float: right;
     -webkit-box-shadow: 0px 6px 62px -6px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 6px 62px -6px rgba(0, 0, 0, 0.3);
@@ -717,10 +719,10 @@ div {
     padding-left: 7px;
   }
   .mobilisation-blog .mobilisation-text h3 {
-    font-size: 20px;
-    margin-bottom: 20px;
-    font-weight: 300;
-    line-height: 1.5;
+    font-size: 18px;
+    margin-bottom: 12px;
+    font-weight: 400;
+    line-height: 1.2;
   }
   .mobilisation-blog .mobilisation-text h3 a {
     color: rgba(0, 0, 0, 0.6);
@@ -774,15 +776,20 @@ div {
   background: whitesmoke;
 }
 .modal {
-  position: relative;
   width: 100% !important;
   max-height: 100vh;
 }
 .modal .close {
   margin-top: -27px;
 }
+.modal-body {
+  font-size: 15px;
+}
 .modal-footer .btn-primary {
   background-color: #228896;
+}
+.modal-footer .btn-primary:hover {
+  background-color: #16727e;
 }
 .modal::-webkit-scrollbar {
   width: 5px;
