--- a/CSS/style.css
+++ b/CSS/style.css
@@ -641,15 +641,33 @@ div {
       padding: 75px;
     }
   }
+  #main .story-entry {
+    float: left;
+    width: 100%;
+  
+  }
+  @media screen and (min-width: 1440px) {
+    #main .story-entry{
+      width:90%
+    }
+
+    #main .padding {
+      padding: 75px;
+    }
+  }
   @media screen and (max-width: 768px) {
     #main .story-entry {
       text-align: left;
     }
   }
-  #main .story-entry .story-img {
-    display: flex;
-  justify-content: center;
-  align-items: center;
+  #main .story-entry > img {
+    float: right;
+    width: 10%;
+    margin-bottom: 30px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
   }
   @media screen and (max-width: 768px) {
     #main .story-entry > img {
@@ -924,11 +942,27 @@ blockquote {
 #section2 .white-block p {
   margin-bottom: 0;
   font-size: 12px;
-  color: #f2dbc8;
-
-  
-  
+  color: #f2dbc8;  
 }
+ .section {
+      height: 500px; /* Adjust the height as needed */
+      background-color: #f7f7f7;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .content {
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      text-align: center;
+      padding: 20px;
+    }
+     .section img{
+      width: 100%; 
+      height: 100%;
+    }
 
 
   
