--- a/CSS/style.css
+++ b/CSS/style.css
@@ -770,6 +770,7 @@ div {
     width: 100%;
     padding: 17px;
     float: right;
+    border-radius: 4px;
     -webkit-box-shadow: 0px 6px 62px -6px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 6px 62px -6px rgba(0, 0, 0, 0.3);
     -ms-box-shadow: 0px 6px 62px -6px rgba(0, 0, 0, 0.3);
@@ -945,7 +946,7 @@ blockquote {
   color: #f2dbc8;  
 }
  .section {
-      height: 500px; /* Adjust the height as needed */
+      height: 400px; /* Adjust the height as needed */
       background-color: #f7f7f7;
       display: flex;
       align-items: center;
@@ -954,14 +955,14 @@ blockquote {
 
     .content {
       width: 100%;
-      height: 100%;
+      height: 80%;
       background-color: #fff;
       text-align: center;
-      padding: 20px;
+      padding: 10px;
     }
      .section img{
       width: 100%; 
-      height: 100%;
+      height: 70%;
     }
 
 
