--- a/CSS/style.css
+++ b/CSS/style.css
@@ -354,6 +354,7 @@ div {
   float: left;
 }
 .text-center {
+  display: flex;
     text-align: center!important;
 }
 .tabs a {
@@ -929,6 +930,21 @@ blockquote {
   
   
 }
+#section2 h1 {
+  text-align: center;
+}
+.navi {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 2px solid black;
+  background-color: #565656;
+}
 
+.navi img {
+  width: 76px;
+  height: 76px;
+  border-radius: 50%;
+}
 
   
