--- a/CSS/style.css
+++ b/CSS/style.css
@@ -962,5 +962,24 @@ blockquote {
   height: 76px;
   border-radius: 50%;
 }
+.sectionH {
+  height: 500px; /* Adjust the height as needed */
+  background-color: #f7f7f7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.contentH {
+  width: 100%;
+  height: 60%;
+  background-color: #fff;
+  text-align: center;
+  padding: 20px;
+}
+
+.sectionh img {
+  width: 100%;
+  height: 60%;
+}
   
