--- a/CSS/style.css
+++ b/CSS/style.css
@@ -126,6 +126,14 @@ div {
     font-size: 28px;
 
   }
+  #side-nav #logo span {
+    font-size: 32px;
+    color: #c18f59;
+    font-family: "Calisto-MT-Bold"; }
+    @media (max-width: 992px) {
+
+      #side-nav #logo span {
+        font-size: 30px; } }
 
 @media screen and (max-width: 768px) {
     #side-nav #logo {
