--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1015,14 +1015,12 @@ blockquote {
 }
 
 tm.container {
-  max-width: 1254px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto 135px;
+  max-width: 100%;
+  align-items: center;
 }
 .tm-nav-item{
   list-style: none;
-  margin: 22px;
+  margin: 15px;
 }
 
 .tm-main-nav ul {
