--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1034,12 +1034,12 @@ tm.container {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 200px;
-  height: 200px;
+  width: 120px;
+  height: 150px;
   padding: 20px;
   border: 1px solid #e9b151;
   border-radius: 15px;
-  color: #555;
+  color: #000;
   box-sizing: border-box;
 }
 
@@ -1059,25 +1059,31 @@ tm.container {
 }
 
 .portfolio-wrapper {
-  width: 390px;
+  width: 30%;
   padding: 8px;
   text-align: center;
   background-color: #fff; }
+
   .portfolio-wrapper .portfolio__img {
     font-size: 0; }
+
     .portfolio-wrapper .portfolio__img img {
       width: 100%; }
+
   .portfolio-wrapper .portfolio__bottom {
     padding: 35px 0 95px;
     background-color: #f5f5f5; }
+
     @media (max-width: 992px) {
       .portfolio-wrapper .portfolio__bottom {
         padding: 25px 0; } }
+
   .portfolio-wrapper .portfolio__name {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    margin-bottom: 23px; }
+    margin-bottom: 15px; }
+
     @media (max-width: 992px) {
       .portfolio-wrapper .portfolio__name {
         margin-bottom: 10px; } }
@@ -1107,8 +1113,7 @@ tm.container {
       width: 250px; } }
 
   .about-me__text {
-     width: 44%;
-    margin-right: 80px;
+     width: 440;
     text-align: center;
     padding: 7px; }
 
