--- a/CSS/style.css
+++ b/CSS/style.css
@@ -716,8 +716,14 @@ div {
 }
 
 @media (max-width: 532px) {
+
     .tm-main-nav ul { 
         max-width: 244px;
+        flex-wrap: nowrap !important;
+        justify-content: flex-start;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+        padding: 0;
     }
 }
   #main .story-entry > div a {
@@ -1014,7 +1020,7 @@ blockquote {
   border-radius: 15px;
 }
 
-tm.container {
+.tm-container {
   max-width: 100%;
   align-items: center;
 }
@@ -1022,7 +1028,20 @@ tm.container {
   list-style: none;
   margin: 15px;
 }
-
+.tm-main-nav {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  width: 100%;
+  left: 50;
+  right: 50;
+  bottom: 0;
+}
+@media (max-width: 532px) {
+  .tm-main-nav {
+    justify-content: start;
+  }
+}
 .tm-main-nav ul {
   display: flex;
   flex-wrap: wrap;
