--- a/CSS/style.css
+++ b/CSS/style.css
@@ -718,11 +718,10 @@ div {
 @media (max-width: 532px) {
 
     .tm-main-nav ul { 
-        max-width: 244px;
+        max-width: 100%;
         flex-wrap: nowrap !important;
         justify-content: flex-start;
-        margin-left: 0 !important;
-        margin-right: 0 !important;
+             
         
     }
 }
