--- a/CSS/style.css
+++ b/CSS/style.css
@@ -723,7 +723,7 @@ div {
         justify-content: flex-start;
         margin-left: 0 !important;
         margin-right: 0 !important;
-        padding: 0;
+        
     }
 }
   #main .story-entry > div a {
@@ -1033,8 +1033,6 @@ blockquote {
   justify-content: center;
   position: fixed;
   width: 100%;
-  left: 50;
-  right: 50;
   bottom: 0;
 }
 @media (max-width: 532px) {
@@ -1047,6 +1045,7 @@ blockquote {
   flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
+  padding: 0;
 }
 
 .tm-nav-link {
@@ -1067,19 +1066,30 @@ blockquote {
   margin: 193px 0 199px;
 }
 
-.about-me-inner {
-  display: flex;
-  justify-content: space-between;
+.about-me-inner:after  {
+  /* Clear floats after the columns */
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .site-container {
-  width: 100%;
-  height: 70%;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.left, .right {
+  width: 25%;
 }
 
+.middle {
+  width: 50%;
+}
 .portfolio-wrapper {
-  width: 30%;
-  padding: 8px;
+  float: left;
+  padding: 10px;
   text-align: center;
   background-color: #fff; }
 
@@ -1132,7 +1142,8 @@ blockquote {
       width: 250px; } }
 
   .about-me__text {
-     width: 440;
+    float: left;
+    padding: 10px;
     text-align: center;
     padding: 7px; }
 
@@ -1197,3 +1208,44 @@ blockquote {
           @media (max-width: 520px) {
             .about-me-slider .slick-next {
               right: 34%; } }
+
+@media screen and (max-width: 600px) {
+    .site-container{
+      display: block;
+    }
+   .portfolio-wrapper {
+     width: 100%;
+   }
+   .about-me_text {
+   width: 100%;
+   }
+   .tm-nav-link {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 78px;
+    height: 78px;
+    font-weight: 400;
+    padding: 8px;
+    border: 2px solid #e9b151;
+    border-radius: 15px;
+    color: #000;
+    font-size: 11px;
+    background-color: #ffffffba;
+    box-sizing: border-box;
+}
+.navi {
+    
+  width: 60px;
+  height: 70px;
+  text-align: center;
+  border-radius: 50%;
+}
+.navi img {
+width: 41px;
+height: 41px;
+border-radius: 50%;
+}
+
+              }
+              
